tdf#101843, ensure repeated rows set the hidden/filtered flag correctly

Change-Id: I759107eeb074698d5e4987c76005788aee33287d
(cherry picked from commit 7e7f6b0a056b51a425934f63745ae5c9fed2e51f)
Reviewed-on: https://gerrit.libreoffice.org/29327
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>